--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,9 @@
     <meta charset="utf-8" />
     <title>Visual Sort</title>
   </head>
-  <body>
+  <body class="page">
     <noscript>You need to enable JavaScript to run this app.</noscript>
+    <link rel="stylesheet" type="text/css" href="vs.css" />
     <div id="root"></div>
   </body>
 </html>
